--- a/website/src/static/templates/donate.html
+++ b/website/src/static/templates/donate.html
@@ -13,7 +13,7 @@ Donate - Tweet Lanes
 
 <div style="padding-top:10px">
 
-      The full source code for Tweet Lanes is available on <a href="https://github/chrislacy/TweetLanes">GitHub</a>.
+      The full source code for Tweet Lanes is available on <a href="https://github.com/chrislacy/TweetLanes">GitHub</a>.
       <br><br>
     </div>
 
