--- a/android/client/res/values/styles.xml
+++ b/android/client/res/values/styles.xml
@@ -33,6 +33,10 @@
         
     </style>
     
+    <style name="Theme.TweetLanes.LightDarkActionBars" parent="android:Theme.Holo.Light.DarkActionBars">
+        
+    </style>
+    
     <style name="Theme.TweetLanes" parent="android:Theme.Holo">
         <item name="vpiListTabPageIndicatorStyle">@style/Widget.ListTabPageIndicator</item>  
         <item name="vpiTabPageIndicatorStyle">@style/Widget.TabPageIndicator</item>
