--- a/website/src/static/templates/home.html
+++ b/website/src/static/templates/home.html
@@ -35,6 +35,7 @@ Tweet Lanes for Android
 
 <div class="title1 fr">Tweet Lanes</div>
 <div class="title2 fr">Pure Twitter, Pure Android.</div>
+<div class="title2 fr">(and App.net too)</div>
 </div>
 
   <div id="text-overlay" style="font-size: 16px;">
@@ -52,7 +53,7 @@ Tweet Lanes for Android
   </div>
 
 
-<div style="padding-top:80px">
+<div style="padding-top:40px">
       <div style="width:168px; margin:0 auto;" >
 
         <a href="https://twitter.com/TweetLanes" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @TweetLanes</a>
@@ -61,6 +62,12 @@ Tweet Lanes for Android
     </div>
 
   </div>
+
+   <div style="padding-top:10px">
+      <div style="width:250px; margin:0 auto;" >
+          <a class="adnw-follow" data-username="tweetlanes" href="https://alpha.app.net/tweetlanes">Follow @tweetlanes on App.net</a>
+      </div>
+    </div>
 
 
         </div>
@@ -71,7 +78,7 @@ Tweet Lanes for Android
 
 
 {% block post_body_block %}
-
+<script async src='https://adnwidgets.herokuapp.com/alpha.js'></script>
 <script type="text/javascript"> 
 
     $(document).ready(function() {
