--- a/android/client/res/layout/tutorial_welcome.xml
+++ b/android/client/res/layout/tutorial_welcome.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/profile_scroll_view"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_weight="1"
+    android:fadingEdge="none"
+    android:layout_height="match_parent"
+    >
+
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
@@ -60,3 +70,4 @@
 
 </LinearLayout>
 
+</ScrollView>
