--- a/android/client/res/menu/single_tweet_selected.xml
+++ b/android/client/res/menu/single_tweet_selected.xml
@@ -1,8 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    	<!-- 
+    	<!--
         <item android:id="@+id/action_reply"
           android:icon="@drawable/ic_action_reply"
-          android:title="@string/action_reply" 
+          android:title="@string/action_reply"
           android:showAsAction="always" /> -->
         <item android:id="@+id/action_retweet"
           android:title="@string/action_retweet"
@@ -17,12 +17,12 @@
               android:title="@string/action_share"
               style="?attr/ic_action_share"
               android:showAsAction="always" />
-		<item 
+		<item
     	    android:showAsAction="always"
     	    android:title="@string/more"
     	    style="?attr/ic_action_overflow">
     	    <menu>
-    	        <!--  
+    	        <!--
 				<item android:id="@+id/action_manage_friendship"
 		          android:title="@string/action_manage_friendship"
 		          android:showAsAction="never" />	-->
@@ -32,7 +32,10 @@
 		    	<item android:id="@+id/action_report_for_spam"
 		          android:title="@string/action_report_for_spam"
 		          android:showAsAction="never" />
+                <item android:id="@+id/action_delete_status"
+                    android:title="@string/action_delete_status"
+                    android:showAsAction="never" />
 	    	</menu>
     	</item>
-    	
+
 </menu>
