--- a/android/client/res/values/arrays.xml
+++ b/android/client/res/values/arrays.xml
@@ -64,4 +64,28 @@
         <item>name_username</item>  
     </string-array>
     
+        <string-array name="notificationtime_list_preference">
+        <item>Never (Manual)</item>
+        <item>1 Minute</item>
+        <item>3 Minutes</item>
+        <item>5 Minutes</item>
+        <item>15 Minutes</item>
+        <item>30 Minutes</item>
+        <item>1 Hour</item>
+        <item>4 Hours</item>
+        <item>12 Hours</item>  
+    </string-array>
+
+    <string-array name="notificationtimevalues_list_preference">
+        <item>0m</item>
+        <item>1m</item>
+        <item>3m</item>
+        <item>5m</item>
+        <item>15m</item>
+        <item>30m</item>
+        <item>1h</item>
+        <item>4h</item>
+        <item>12h</item> 
+    </string-array>
+    
 </resources>
