Add minimum height to direct message compose box so as the character count shows.
This fixes #106

--- a/android/libraries/TweetLanesCore/res/layout/compose_direct_message.xml
+++ b/android/libraries/TweetLanesCore/res/layout/compose_direct_message.xml
@@ -41,7 +41,7 @@
                 android:hint="Here is a hint"
                 android:textSize="@dimen/compose_tweet_text_size"
                 android:imeOptions="flagNoExtractUi"
-                >
+                android:minHeight="55dp">
             <!--  <requestFocus /> -->
         </com.tweetlanes.android.core.widget.EditClearText>
 
