--- a/android/libraries/TweetLanesCore/res/values/arrays.xml
+++ b/android/libraries/TweetLanesCore/res/values/arrays.xml
@@ -66,6 +66,7 @@
 
     <string-array name="notificationtime_list_preference">
         <item>Never (Manual)</item>
+        <item>2 Minutes</item>
         <item>3 Minutes</item>
         <item>5 Minutes</item>
         <item>15 Minutes</item>
@@ -77,6 +78,7 @@
 
     <string-array name="notificationtimevalues_list_preference">
         <item>0m</item>
+        <item>2m</item>
         <item>3m</item>
         <item>5m</item>
         <item>15m</item>
