Set alerts to be exact rather than inexact
added 2 minute notification time.
Also updated descriptions on times below 5 minutes to warn of rate limit issues

--- a/android/libraries/TweetLanesCore/res/values/arrays.xml
+++ b/android/libraries/TweetLanesCore/res/values/arrays.xml
@@ -66,8 +66,9 @@
 
     <string-array name="notificationtime_list_preference">
         <item>Never (Manual)</item>
-        <item>3 Minutes</item>
-        <item>5 Minutes</item>
+        <item>2 Minutes (Rate Limit Issues May Occur)</item>
+        <item>3 Minutes (Rate Limit Issues May Occur)</item>
+        <item>5 Minutes (Recommended)</item>
         <item>15 Minutes</item>
         <item>30 Minutes</item>
         <item>1 Hour</item>
@@ -77,6 +78,7 @@
 
     <string-array name="notificationtimevalues_list_preference">
         <item>0m</item>
+        <item>2m</item>
         <item>3m</item>
         <item>5m</item>
         <item>15m</item>
