--- a/android/libraries/TweetLanesCore/res/layout/compose_tweet.xml
+++ b/android/libraries/TweetLanesCore/res/layout/compose_tweet.xml
@@ -2,58 +2,73 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:orientation="horizontal"
-              android:paddingBottom="4dip"
-              android:paddingTop="4dip"
-              style="?attr/background">
+              android:orientation="vertical">
 
-    <com.tweetlanes.android.core.widget.EditClearText
-            android:id="@+id/statusEditText"
-            android:layout_width="0dip"
+    <LinearLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:inputType="textMultiLine|textCapSentences"
-            android:layout_gravity="bottom"
-            android:layout_marginLeft="8dip"
-            android:layout_marginRight="8dip"
-            android:textSize="@dimen/compose_tweet_text_size"
-            android:minHeight="55dp">
-        <!--  <requestFocus /> -->
-    </com.tweetlanes.android.core.widget.EditClearText>
+            android:layout_weight="0.1">
 
-    <ImageView
-            android:id="@+id/statusImage"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="bottom"
-            />
+        <ListView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/autocompleteListView"
+                android:visibility="gone"/>
+    </LinearLayout>
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:layout_width="wrap_content"
-                    android:layout_height="fill_parent"
-                    android:layout_marginRight="6dip"
-                    android:orientation="vertical">
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingBottom="4dip"
+            android:paddingTop="4dip">
 
-        <ImageButton
-                android:id="@+id/sendTweetButton"
-                android:layout_width="44dp"
+        <com.tweetlanes.android.core.widget.EditClearText
+                android:id="@+id/statusEditText"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:inputType="textMultiLine|textCapSentences"
+                android:gravity="bottom"
+                android:layout_marginLeft="8dip"
+                android:layout_marginRight="8dip"
+                android:textSize="@dimen/compose_tweet_text_size">
+        </com.tweetlanes.android.core.widget.EditClearText>
+
+        <ImageView
+                android:id="@+id/statusImage"
+                android:layout_width="40dp"
                 android:layout_height="40dp"
-                style="?attr/ic_action_send"
-                android:scaleType="fitXY"
-                android:layout_alignParentBottom="true"/>
+                android:layout_gravity="bottom"
+                />
 
-        <TextView
-                android:id="@+id/characterCount"
-                android:layout_width="44dp"
-                android:layout_height="14dp"
-                android:textColor="@color/text_hairline"
-                android:gravity="top|center_horizontal"
-                android:text="140"
-                android:textSize="12sp"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:layout_above="@+id/sendTweetButton"/>
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                        android:layout_width="wrap_content"
+                        android:layout_height="fill_parent"
+                        android:layout_marginRight="6dip"
+                        android:orientation="vertical">
+
+            <ImageButton
+                    android:id="@+id/sendTweetButton"
+                    android:layout_width="44dp"
+                    android:layout_height="40dp"
+                    style="?attr/ic_action_send"
+                    android:scaleType="fitXY"
+                    android:layout_alignParentBottom="true"/>
+
+            <TextView
+                    android:id="@+id/characterCount"
+                    android:layout_width="44dp"
+                    android:layout_height="14dp"
+                    android:textColor="@color/text_hairline"
+                    android:gravity="top|center_horizontal"
+                    android:text="140"
+                    android:textSize="12sp"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_above="@+id/sendTweetButton"/>
 
 
-    </RelativeLayout>
+        </RelativeLayout>
 
+    </LinearLayout>
 </LinearLayout>
